--- a/index.html
+++ b/index.html
@@ -493,18 +493,20 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>
       </div>
     </article>
-    <article>
-      <div>
+    <article class="blog">
+      <div class="blog__title">
         <h4>Our Stories</h4>
         <h3>Latest Blog</h3>
       </div>
-      <div>
-        <img src="img/stories-1.jpg" alt="">
-        <div>
-          <p>LOREM IPSUM DOLOR SIT AMET</p>
-          <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="blog__post">
+        <div class="blog__post__date">
+          <h3>15</h3>
+          <p>Jan</p>
         </div>
-        <div>
+        <img src="img/stories-1.jpg" alt="">
+        <p class="blog__post__heading">LOREM IPSUM DOLOR SIT AMET</p>
+        <p class="blog__post--border">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboreet  dolore magna aliqua.</p>
+        <div class="blog__post__activity">
           <svg xmlns="http://www.w3.org/2000/svg" width="19.441" height="11.245" viewBox="0 0 19.441 11.245">
             <path id="VIEW" d="M379.71,9115.775c0,.009,0,.018,0,.025v.012c0,.006,0,.012,0,.018s0,.014,0,.021v0a.752.752,0,0,1-.2.409c-.2.247-.427.479-.651.707a16.8,16.8,0,0,1-4.123,3.123,11.033,11.033,0,0,1-3.089,1.115,8.978,8.978,0,0,1-3.55-.05,13.406,13.406,0,0,1-5.5-2.863,14.954,14.954,0,0,1-2.108-2.032.776.776,0,0,1,0-1.048c.2-.247.427-.479.651-.707a16.765,16.765,0,0,1,4.123-3.122,11,11,0,0,1,3.089-1.117,9,9,0,0,1,3.55.051,13.394,13.394,0,0,1,5.5,2.863,14.919,14.919,0,0,1,2.108,2.032.752.752,0,0,1,.2.409v0c0,.007,0,.014,0,.021s0,.012,0,.018v.013c0,.008,0,.016,0,.024s0,.024,0,.037S379.71,9115.764,379.71,9115.775Zm-9.719-3.833a3.645,3.645,0,1,0,3.645,3.645A3.645,3.645,0,0,0,369.991,9111.942Zm0,5.467a1.822,1.822,0,1,1,1.822-1.822A1.822,1.822,0,0,1,369.991,9117.409Z" transform="translate(-360.27 -9110.116)" fill="#95e1d3"/>
           </svg>
@@ -515,13 +517,15 @@
           <p>17</p>          
         </div>
       </div>
-      <div>
-        <img src="img/stories-2.jpg" alt="">
-        <div>
-          <p>LOREM IPSUM DOLOR SIT AMET</p>
-          <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="blog__post">
+        <div class="blog__post__date">
+          <h3>15</h3>
+          <p>Jan</p>
         </div>
-        <div>
+        <img src="img/stories-2.jpg" alt="">
+        <p class="blog__post__heading">LOREM IPSUM DOLOR SIT AMET</p>
+        <p class="blog__post--border">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="blog__post__activity">
           <svg xmlns="http://www.w3.org/2000/svg" width="19.441" height="11.245" viewBox="0 0 19.441 11.245">
             <path id="VIEW" d="M379.71,9115.775c0,.009,0,.018,0,.025v.012c0,.006,0,.012,0,.018s0,.014,0,.021v0a.752.752,0,0,1-.2.409c-.2.247-.427.479-.651.707a16.8,16.8,0,0,1-4.123,3.123,11.033,11.033,0,0,1-3.089,1.115,8.978,8.978,0,0,1-3.55-.05,13.406,13.406,0,0,1-5.5-2.863,14.954,14.954,0,0,1-2.108-2.032.776.776,0,0,1,0-1.048c.2-.247.427-.479.651-.707a16.765,16.765,0,0,1,4.123-3.122,11,11,0,0,1,3.089-1.117,9,9,0,0,1,3.55.051,13.394,13.394,0,0,1,5.5,2.863,14.919,14.919,0,0,1,2.108,2.032.752.752,0,0,1,.2.409v0c0,.007,0,.014,0,.021s0,.012,0,.018v.013c0,.008,0,.016,0,.024s0,.024,0,.037S379.71,9115.764,379.71,9115.775Zm-9.719-3.833a3.645,3.645,0,1,0,3.645,3.645A3.645,3.645,0,0,0,369.991,9111.942Zm0,5.467a1.822,1.822,0,1,1,1.822-1.822A1.822,1.822,0,0,1,369.991,9117.409Z" transform="translate(-360.27 -9110.116)" fill="#95e1d3"/>
           </svg>
@@ -532,13 +536,15 @@
           <p>42</p>          
         </div>
       </div>
-      <div>
-        <img src="img/stories-3.jpg" alt="">
-        <div>
-          <p>LOREM IPSUM DOLOR SIT AMET</p>
-          <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="blog__post">
+        <div class="blog__post__date">
+          <h3>15</h3>
+          <p>Jan</p>
         </div>
-        <div>
+        <img src="img/stories-3.jpg" alt="">
+        <p class="blog__post__heading">LOREM IPSUM DOLOR SIT AMET</p>
+        <p class="blog__post--border">Consectetur adipiscing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua.</p>
+        <div class="blog__post__activity">
           <svg xmlns="http://www.w3.org/2000/svg" width="19.441" height="11.245" viewBox="0 0 19.441 11.245">
             <path id="VIEW" d="M379.71,9115.775c0,.009,0,.018,0,.025v.012c0,.006,0,.012,0,.018s0,.014,0,.021v0a.752.752,0,0,1-.2.409c-.2.247-.427.479-.651.707a16.8,16.8,0,0,1-4.123,3.123,11.033,11.033,0,0,1-3.089,1.115,8.978,8.978,0,0,1-3.55-.05,13.406,13.406,0,0,1-5.5-2.863,14.954,14.954,0,0,1-2.108-2.032.776.776,0,0,1,0-1.048c.2-.247.427-.479.651-.707a16.765,16.765,0,0,1,4.123-3.122,11,11,0,0,1,3.089-1.117,9,9,0,0,1,3.55.051,13.394,13.394,0,0,1,5.5,2.863,14.919,14.919,0,0,1,2.108,2.032.752.752,0,0,1,.2.409v0c0,.007,0,.014,0,.021s0,.012,0,.018v.013c0,.008,0,.016,0,.024s0,.024,0,.037S379.71,9115.764,379.71,9115.775Zm-9.719-3.833a3.645,3.645,0,1,0,3.645,3.645A3.645,3.645,0,0,0,369.991,9111.942Zm0,5.467a1.822,1.822,0,1,1,1.822-1.822A1.822,1.822,0,0,1,369.991,9117.409Z" transform="translate(-360.27 -9110.116)" fill="#95e1d3"/>
           </svg>
