--- a/index.html
+++ b/index.html
@@ -119,21 +119,21 @@
         <h4>We work with</h4>
         <h3>Amazing Services</h3>
       </div>
-      <div class="services__element">
+      <div class="services__element services__element--margin">
         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="30.5" viewBox="0 0 32 30.5">
           <path id="ALARM" d="M420.74,2319.5a15.72,15.72,0,0,0-8.242-8.243,5.869,5.869,0,0,1,8.242,8.243Zm-.24,6.5a14.435,14.435,0,0,1-3.962,9.94l2.028,2.028a1.483,1.483,0,1,1-2.1,2.1l-2.178-2.178a14.457,14.457,0,0,1-16.566.01l-2.163,2.164a1.5,1.5,0,0,1-2.121-2.121l2.012-2.012A14.494,14.494,0,1,1,420.5,2326ZM406,2314.5a11.5,11.5,0,1,0,11.5,11.5A11.5,11.5,0,0,0,406,2314.5Zm6,13h-6a1.5,1.5,0,0,1-1.5-1.5v-8a1.5,1.5,0,0,1,3,0v6.5H412a1.5,1.5,0,0,1,0,3Zm-20.713-7.794a5.994,5.994,0,0,1,8.419-8.419A16.056,16.056,0,0,0,391.287,2319.706Z" transform="translate(-390 -2310)" fill="#95e1d3"/>
         </svg>
         <p>Photography</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
       </div>
-      <div class="services__element">
+      <div class="services__element services__element--margin">
         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
           <path id="LINE_GRAPH" data-name="LINE GRAPH" d="M821.5,2341h-29a1.5,1.5,0,0,1-1.5-1.5v-29a1.5,1.5,0,0,1,1.5-1.5h29a1.5,1.5,0,0,1,1.5,1.5v29A1.5,1.5,0,0,1,821.5,2341Zm-1.5-29H794v26h26Zm-23.785,13.239h0l4-2.5h0a1.5,1.5,0,0,1,1.625.036l.006-.009,6.631,4.42,7.638-5.391a1.5,1.5,0,1,1,1.764,2.426h0l-8.5,6h0a1.5,1.5,0,0,1-1.74.012l-6.656-4.437-3.136,1.96a1.5,1.5,0,1,1-1.631-2.517Z" transform="translate(-791 -2309)" fill="#95e1d3"/>
         </svg>        
         <p>Web Design</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
       </div>
-      <div class="services__element">
+      <div class="services__element services__element--margin">
         <svg xmlns="http://www.w3.org/2000/svg" width="31" height="28" viewBox="0 0 31 28">
           <path id="COMPUTER_OK" data-name="COMPUTER / OK" d="M1220,2333h-9.5v2.5l2,2v.5h-13v-.5l2-2V2333H1192a1.5,1.5,0,0,1-1.5-1.5v-20a1.5,1.5,0,0,1,1.5-1.5h28a1.5,1.5,0,0,1,1.5,1.5v20A1.5,1.5,0,0,1,1220,2333Zm-.5-21h-27v17h27Zm-16.5,7a1.5,1.5,0,0,1,1.061.439h0l.939.939,2.939-2.939h0a1.5,1.5,0,1,1,2.121,2.121h0l-4,4h0a1.5,1.5,0,0,1-2.121,0h0l-2-2h0A1.5,1.5,0,0,1,1203,2319Z" transform="translate(-1190.5 -2310)" fill="#95e1d3"/>
         </svg>        
@@ -168,19 +168,21 @@
         <h3>Unique Design</h3>
       </div>
       <img class="design__background"
-        alt="Nosediving eagle"
-        srcset="
-        img/unique-background-mobile.jpg 420w,
-        img/unique-background-tablet.jpg 700w,
-        img/unique-background-tablet-XL.jpg 900w,
-        img/unique-background-laptop.jpg 1200w,
-        img/unique-background.jpg 1400w
-        "
-        src="img/unique-background-mobile.jpg"\
-        sizes="100vw"
-        >
-      <img class="design__tablet" src="img/unique-tablet.png" alt="Tablet">
-      <img class="design__phone" src="img/iphone.png" alt="Iphone">
+      alt="Nosediving eagle"
+      srcset="
+      img/unique-background-mobile.jpg 420w,
+      img/unique-background-tablet.jpg 700w,
+      img/unique-background-tablet-XL.jpg 900w,
+      img/unique-background-laptop.jpg 1200w,
+      img/unique-background.jpg 1400w
+      "
+      src="img/unique-background-mobile.jpg"\
+      sizes="100vw"
+      >
+      <div class="design__devices">
+        <img class="design__devices__tablet" src="img/unique-tablet.png" alt="Tablet">
+        <img class="design__devices__phone" src="img/iphone.png" alt="Iphone">
+      </div>
     </article>
     <article class="we-do">
       <div class="we-do__title">
