--- a/index.html
+++ b/index.html
@@ -190,50 +190,49 @@
         <h3>What We Do</h3>
       </div>
       <p class="we-do__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodoconsequat.</p>
+      <img src="img/service-main.jpg" alt="">
       <div class="we-do__info">
-        <img src="img/service-main.jpg" alt="">
-        <div class="we-do__info__element js-open">
-          <svg class="we-do__info__element__icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
+        <div class="we-do__info__block js-open">
+          <svg class="we-do__info__block__icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
             <path id="PICTURE" d="M1006,3959a1.5,1.5,0,0,1-1,1.407v1.683a1.5,1.5,0,1,1-1.908,1.909h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.491,1.491,0,0,1-2.816,0h-1.684a1.5,1.5,0,1,1-1.908-1.909v-1.683a1.492,1.492,0,0,1,0-2.816v-1.683a1.492,1.492,0,0,1,0-2.817v-1.684a1.492,1.492,0,0,1,0-2.817v-1.683a1.491,1.491,0,0,1,0-2.815v-1.684a1.491,1.491,0,0,1,0-2.816v-1.685a1.5,1.5,0,1,1,1.908-1.907h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.491,1.491,0,0,1,2.816,0h1.684a1.5,1.5,0,1,1,1.908,1.907v1.685a1.491,1.491,0,0,1,0,2.816v1.684a1.491,1.491,0,0,1,0,2.815v1.683a1.492,1.492,0,0,1,0,2.817v1.684a1.492,1.492,0,0,1,0,2.817v1.683A1.5,1.5,0,0,1,1006,3959Zm-4-20H980v22h22Zm-13,16,7-8.5,4.5,7v6h-19l6-6Zm-3-7a3,3,0,1,1,3-3A3,3,0,0,1,986,3948Z" transform="translate(-976 -3934.999)" fill="#95e1d3"/>
           </svg>
-          <h4 class="we-do__info__element__title">Photography</h4>
-          <button class="we-do__info__element__arrow js-open__turn">
+          <h4 class="we-do__info__block__title">Photography</h4>
+          <button class="we-do__info__block__arrow js-open__turn">
             <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
               <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
             </svg>
           </button>
-          <div class="we-do__info__element__des js-open__des">
+          <div class="we-do__info__block__des js-open__des">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
           </div>          
         </div>
-        <div class="we-do__info__element">
-          <svg class="we-do__info__element__icon" xmlns="http://www.w3.org/2000/svg" width="28" height="32" viewBox="0 0 28 32">
+        <div class="we-do__info__block">
+          <svg class="we-do__info__block__icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30">
             <path id="EQUALIZER" d="M1002.5,4200.5h-3a1.5,1.5,0,0,1-1.5-1.5v-6a1.5,1.5,0,0,1,1.5-1.5h3a1.5,1.5,0,0,1,1.5,1.5v6A1.5,1.5,0,0,1,1002.5,4200.5Zm-3-15a1.5,1.5,0,0,1,3,0v4.5h-3Zm-8,23h-3a1.5,1.5,0,0,1-1.5-1.5v-6a1.5,1.5,0,0,1,1.5-1.5h3a1.5,1.5,0,0,1,1.5,1.5v6A1.5,1.5,0,0,1,991.5,4208.5Zm-3-23a1.5,1.5,0,0,1,3,0V4198h-3Zm-8,19h-3a1.5,1.5,0,0,1-1.5-1.5v-6a1.5,1.5,0,0,1,1.5-1.5h3a1.5,1.5,0,0,1,1.5,1.5v6A1.5,1.5,0,0,1,980.5,4204.5Zm-3-19a1.5,1.5,0,0,1,3,0v8.5h-3Zm3,29a1.5,1.5,0,1,1-3,0V4206h3Zm11,0a1.5,1.5,0,1,1-3,0V4210h3Zm11,0a1.5,1.5,0,1,1-3,0V4202h3Z" transform="translate(-976 -4183.998)" fill="#95e1d3"/>
           </svg>
-          
-          <h4 class="we-do__info__element__title">Creativity</h4>
-          <button class="we-do__info__element__arrow">
+          <h4 class="we-do__info__block__title">Creativity</h4>
+          <button class="we-do__info__block__arrow">
             <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
               <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
             </svg>
           </button>
-          <div class="we-do__info__element__des">
+          <div class="we-do__info__block__des">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
           </div>          
         </div>
-        <div class="we-do__info__element">
-          <svg class="we-do__info__element__icon" xmlns="http://www.w3.org/2000/svg" width="32" height="32.001" viewBox="0 0 32 32.001">
+        <div class="we-do__info__block">
+          <svg class="we-do__info__block__icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 32 32.001">
             <path id="BULLSEYE" d="M991,4286a16,16,0,1,1,16-16A16,16,0,0,1,991,4286Zm0-29a13,13,0,1,0,13,13A13,13,0,0,0,991,4257Zm0,22.5a9.5,9.5,0,1,1,9.5-9.5A9.5,9.5,0,0,1,991,4279.5Zm0-16a6.5,6.5,0,1,0,6.5,6.5A6.5,6.5,0,0,0,991,4263.5Zm0,9.5a3,3,0,1,1,3-3A3,3,0,0,1,991,4273Z" transform="translate(-975 -4253.998)" fill="#95e1d3"/>
           </svg>          
-          <h4 class="we-do__info__element__title">Web Design</h4>
-          <button class="we-do__info__element__arrow">
+          <h4 class="we-do__info__block__title">Web Design</h4>
+          <button class="we-do__info__block__arrow">
             <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
               <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
             </svg>
           </button>
-          <div class="we-do__info__element__des">
+          <div class="we-do__info__block__des">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
             </p>
           </div>          
