--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/app.min.css">
   </head>
   <body>
@@ -248,8 +248,10 @@
         <svg class="testimonials-inline__icon" xmlns="http://www.w3.org/2000/svg" width="63" height="61.001" viewBox="0 0 63 61.001">
           <path id="SPEECH_4" data-name="SPEECH 4" d="M574,4571h-2v5h0a3.014,3.014,0,0,1-.061.6,2.928,2.928,0,0,1-.122.393c-.02.057-.03.117-.053.169a2.927,2.927,0,0,1-.177.327c-.035.061-.061.126-.1.185a3.1,3.1,0,0,1-.333.4c-.012.013-.021.028-.033.04a2.984,2.984,0,0,1-2.084.875c-.013,0-.024,0-.037,0h0a2.986,2.986,0,0,1-2.121-.878L559.757,4571H532a3,3,0,0,1-3-3v-30a3,3,0,0,1,3-3h42a3,3,0,0,1,3,3v30A3,3,0,0,1,574,4571Zm-15.485,3,6.326,6.326.008-.008A5.968,5.968,0,0,0,569,4582v2a3,3,0,0,1-3,3H534.243l-8.121,8.123A2.992,2.992,0,0,1,524,4596h0c-.013,0-.024,0-.037,0a3,3,0,0,1-2.084-.875c-.012-.013-.021-.029-.033-.042a2.916,2.916,0,0,1-.333-.4c-.039-.057-.065-.122-.1-.183a3.094,3.094,0,0,1-.177-.325c-.023-.055-.033-.115-.053-.171a2.959,2.959,0,0,1-.122-.393,3.007,3.007,0,0,1-.061-.6h0v-6h-4a3,3,0,0,1-3-3v-34h0a3,3,0,0,1,3-3h9v21a6,6,0,0,0,6,6Z" transform="translate(-514 -4534.997)" fill="#95e1d3"/>
         </svg>
-        <p class="testimonials-inline__opinion">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
-        <p class="testimonials-inline__name">Jon Doe</p>
+        <div>
+          <p class="testimonials-inline__opinion">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
+          <p class="testimonials-inline__name">Jon Doe</p>
+        </div>
         <button class="testimonials-inline__arrow-right">
           <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
             <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
