--- a/index.html
+++ b/index.html
@@ -446,8 +446,10 @@
         </svg>
       </button>
       <img src="img/testimonials-slide.jpg" alt="">
-        <p class="testimonials-inline__opinion">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
-        <p class="testimonials-inline__name">Jon Doe</p>
+        <div>
+          <p class="testimonials-inline__opinion">“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.”</p>
+          <p class="testimonials-inline__name">Jon Doe</p>
+        </div>
         <button class="testimonials-inline__arrow-right">
           <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12.001" viewBox="0 0 21 12.001">
             <path id="ARROW_UP" data-name="ARROW / DOWN" d="M1521.138,3955.475l7.859-7.859,7.962,7.962h0a1.5,1.5,0,0,0,2.12-2.121h0l-9-9h0A1.5,1.5,0,0,0,1529,3944h-.007a1.5,1.5,0,0,0-1.079.458h0l-9,9,0,0a1.5,1.5,0,1,0,2.22,2.015Z" transform="translate(-1518.5 -3943.998)" fill="#ccc"/>
